# amethyst_2d_platformer

./: Cargo.toml  LICENSE  README.md
assets/textures/: player.ron
config/: bindings.ron  display.ron
src/: collision.rs  collision_event.rs  main.rs  ray.rs  rectangle.rs  resources.rs  util.rs  utils.rs
src/components/: active_camera.rs  animated_sprite.rs  animation.rs  controllable.rs  ground.rs  local_player.rs  mod.rs  physics.rs  player_actor.rs  velocity.rs
src/components/actor/: action.rs  actions.rs  actor_data.rs  camera_follow.rs  control_state.rs  controllable.rs  controol_state.rs  mod.rs
src/components/physics/: collider.rs  mod.rs  physics_body.rs  ray_caster.rs  ray_tracer.rs
src/entities/: camera.rs  level.rs  mod.rs  player.rs
src/resources/: mod.rs
src/states/: gameplay.rs  mod.rs
src/systems/: actor_control.rs  animation.rs  camera_follow.rs  collision.rs  control.rs  debug_shapes.rs  kinematic.rs  local_player.rs  mod.rs  movement.rs  physics.rs  player_input.rs
