[package]
name = "amethyst-2d-platformer"
version = "0.0.1"
authors = ["Ole A. Sjo Fasting <oasf@polygo.no>"]
edition = "2018"

[dependencies]
amethyst = { git = "https://github.com/amethyst/amethyst", branch = "master" }
ncollide2d = "0.23.0"

[features]
default = ["vulkan"]
empty = ["amethyst/empty"]
metal = ["amethyst/metal"]
vulkan = ["amethyst/vulkan"]
