[package]
name = "amethyst_2d_platformer"
version = "0.0.1"
authors = ["Ole A. Sjo Fasting <oasf@polygo.no>"]
edition = "2018"

[dependencies]
amethyst = "0.15.0"
amethyst_nphysics = "0.2.0"
amethyst_physics = "0.2.0"

[features]
default = ["vulkan"]
empty = ["amethyst/empty"]
metal = ["amethyst/metal"]
vulkan = ["amethyst/vulkan"]
